docs/requirements/v1.3.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want my registry authorization information to be securely managed on the file system ([#17](https://github.com/NASA-PDS/registry-loader/issues/17)) 


This requirement is not impacted by the current version
## As a user, I want to update 1 or more metadata values in the registry ([#21](https://github.com/NASA-PDS/registry-loader/issues/21)) 


This requirement is not impacted by the current version
## As a Node Operator, I want to specify an alternate file paths for 1 or more archive products ([#104](https://github.com/NASA-PDS/registry-loader/issues/104)) 


This requirement is not impacted by the current version
## As a user, I want to exclude files from harvest run based upon PDS4 product class ([#103](https://github.com/NASA-PDS/registry-loader/issues/103)) 


This requirement is not impacted by the current version
## As a user, I want to provide alternate protocol URIs for accessing the data ([#102](https://github.com/NASA-PDS/registry-loader/issues/102)) 


This requirement is not impacted by the current version
## As a user, I want to load compressed subsets of files into the Registry ([#101](https://github.com/NASA-PDS/registry-loader/issues/101)) 


This requirement is not impacted by the current version
## As a Harvest user, I want both the file path and the lidvid included in log messages ([#42](https://github.com/NASA-PDS/registry-loader/issues/42)) 


This requirement is not impacted by the current version
## As a Node Operator, I want to configure registry-manager with a single -c flag like harvest ([#62](https://github.com/NASA-PDS/registry-loader/issues/62)) 


This requirement is not impacted by the current version
## Add -c flag to registry-manager to align CLI with harvest ([#63](https://github.com/NASA-PDS/registry-loader/issues/63)) 


This requirement is not impacted by the current version
## As a node operator, I want harvest to fail product loading when a namespace schema or attribute data type cannot be found ([#65](https://github.com/NASA-PDS/registry-loader/issues/65)) 


This requirement is not impacted by the current version
## As a node operator, I want to force-load products when namespace schema or attribute type is unresolvable, knowing affected fields will not be fully indexed ([#66](https://github.com/NASA-PDS/registry-loader/issues/66)) 


This requirement is not impacted by the current version
## As a user, I want clearer per-product success/failure logging during harvest ([#100](https://github.com/NASA-PDS/registry-loader/issues/100)) 


This requirement is not impacted by the current version
## As a registry operator, I want the index schema to include ops:Ancestry_Meta/ops:registry_membership_complete so that bundle and collection products can store their membership completeness status ([#72](https://github.com/NASA-PDS/registry-loader/issues/72)) 


This requirement is not impacted by the current version
## As a registry operator, I want harvest to initialize ops:Ancestry_Meta/ops:registry_membership_complete to false for bundle and collection products upon ingestion ([#73](https://github.com/NASA-PDS/registry-loader/issues/73)) 


This requirement is not impacted by the current version
## As a node operator, I want to force-load products when an attribute is unresolvable, knowing that attribute will not be indexed ([#74](https://github.com/NASA-PDS/registry-loader/issues/74)) 


This requirement is not impacted by the current version
## As a node operator, I want export-dd to support namespace filtering and pagination ([#82](https://github.com/NASA-PDS/registry-loader/issues/82)) 


This requirement is not impacted by the current version
## As a node operator, I want harvest to fail when file_ref paths are not converted to web URLs by replacePrefix ([#99](https://github.com/NASA-PDS/registry-loader/issues/99)) 


This requirement is not impacted by the current version
## As a data engineer, I want registry-loader to initialize ops:Provenance/ops:registry_sweepers_ancestry_completed = false upon initial product load ([#84](https://github.com/NASA-PDS/registry-loader/issues/84)) 


This requirement is not impacted by the current version
## As a data engineer, I want Harvest to index XML attributes from PDS4 label elements ([#92](https://github.com/NASA-PDS/registry-loader/issues/92)) 


This requirement is not impacted by the current version